# vimi42-frontend

./: .gitignore  bash.exe.stackdump  main.py  pyproject.toml
app/: app.py  router.py  theme.py
app/Modules/GlobalComponents/: base_layout.py  components.py  services.py
app/Modules/Identidade/: forgot_password_view.py  inputs.py  login_view.py  register_view.py  routes.py  services.py
app/core/errors/: error_mapper.py  exceptions.py
app/core/layouts/: app_shell.py
app/core/navigation/: router.py  routes.py  routes_factory.py
app/core/state/: app_state.py
app/core/theme/: colors.py  spacing.py  theme.py  theme_mode.py  theme_resolver.py  typography.py
app/core/utils/: debounce.py  validators.py
app/modules/auth/controller/: auth_controller.py
app/modules/auth/domain/: auth_validations.py  register_models.py
app/modules/auth/services/: auth_service.py
app/modules/auth/ui/: forgot_password_page.py  login_page.py  register_page.py  reset_password_new_page.py  reset_password_token_page.py
app/modules/home/ui/: home_page.py
app/shared/components/buttons/: google_auth_button.py  link_button.py  primary_button.py
app/shared/components/dialogs/: __init__.py  base_overlay.py  dialog_dispatcher.py  dialog_queue.py  error_overlay.py  info_overlay.py  success_overlay.py  warning_overlay.py
app/shared/components/inputs/: password_rules_card.py  text_field.py
app/shared/components/navigation/: bottom_navbar.py
app/shared/services/: http_client.py  storange_service.py
mock_backend/: main.py
