[project]
name = "vimi42_frontend"
version = "0.1.0"
description = ""
authors = [
    {name = "omatheusbrenno",email = "matheusbrennolanasilva@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flet (>=0.28.3,<0.29.0)"
]

[tool.poetry]
packages = [{include = "vimi42_frontend", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
